--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     ext.kotlin_version = "1.4.21"
     ext.glide_version = "4.11.0"
+    ext.lottie_version = "3.4.1"
     repositories {
         google()
         jcenter()
