--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Androidpemulatraditionaldance">
-        <activity android:name=".ui.splash.SplashActivity"
+        <activity android:name=".ui.profile.ProfileActivity" />
+        <activity
+            android:name=".ui.splash.SplashActivity"
             android:theme="@style/Theme.Androidpemulatraditionaldance.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,9 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.detail.DetailActivity" />
-        <activity android:name=".ui.main.MainActivity">
-
-        </activity>
+        <activity android:name=".ui.main.MainActivity" />
     </application>
 
 </manifest>
